<resources>
    <string name="app_name">Concept</string>
    <string name="app_name_caps">CONCEPT</string>
    <string name="sign_up_store">New Store</string>
    <string name="sign_up_customer">New User</string>
    <string name="sign_up_customer_proceed">Sign Up</string>
    <string name="sign_up_store_proceed">Add Store</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_product_view">ProductView</string>
    <string name="title_shop_tab">Shop</string>
    <string name="title_cart_tab">Cart</string>
    <string name="title_user_tab">Account</string>

    <string-array name="functions">
        <item>Notifications</item>
        <item>Orders</item>
        <item>Transactions</item>
    </string-array>

    <string name="registerCustomerAccountURL">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/registerCustomerAccount.php</string>
    <string name="authenticateCustomerURL">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/authenticateCustomer.php</string>
    <string name="getAllProducts">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getAllProducts.php</string>
    <string name="getProfileInformation">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getProfileInformation.php</string>
    <string name="updateProfileInformation">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/updateProfileInformation.php</string>
    <string name="updateCustomerPassword">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/updateCustomerPassword.php</string>
    <string name="getProductInformation">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getProductInformation.php</string>
    <string name="addItemToCart">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/addItemToCart.php</string>
    <string name="getCartItemsInformation">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getCartItemsInformation.php</string>
    <string name="deleteFromCart">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/deleteFromCart.php</string>
    <string name="updateCartQuantity">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/updateCartQuantity.php</string>
    <string name="getCartCount">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getCartCount.php</string>
    <string name="productImageBaseURL">http://10.0.2.2/WebFramFinalProj/public/storage/product_images/</string>
    <string name="getCurrentBalance">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getCurrentBalance.php</string>
    <string name="addCustomerLoad">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/addCustomerLoad.php</string>
    <string name="finalizeCustomerOrder">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/finalizeCustomerOrder.php</string>
    <string name="getLoadTransactions">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getLoadTransactions.php</string>
    <string name="getDeliveryItems">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/getDeliveryItems.php</string>
    <string name="cancelOrder">http://10.0.2.2/CSELEC2_finals_celemin_cristobal/api/cancelOrder.php</string>
</resources>
