<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:padding="16dp">

    <ImageView
        android:id="@+id/conceptLogo"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/conceptTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/conceptLogo"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/nunito"
        android:text="@string/app_name_caps"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/conceptTitle"
        android:background="#000"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="email address"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textSize="24sp"
        android:id="@+id/emailInput"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:background="#000"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="24sp"
        android:id="@+id/passwordInput"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:id="@+id/rememberHolder"
        android:layout_below="@+id/passwordInput"
        android:layout_marginBottom="4dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/rememberMeCheck"
            android:text="Remember Me"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberHolder"
        android:id="@+id/btnContainer">
        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/sign_up_customer"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginRight="4dp"
            android:textSize="18sp"
            android:id="@+id/newUserBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="4dp"
            android:height="35dp"
            android:background="@drawable/button_shape"
            android:id="@+id/logInBtn"
            android:text="Login"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:id="@+id/shopCountText"
        android:layout_marginTop="8dp"
        android:layout_alignRight="@id/btnContainer"
        android:textSize="14sp"
        android:layout_below="@id/btnContainer"/>

</RelativeLayout>