<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpCustomer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:hint="first name"/>

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="last name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/firstNameInput"/>

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="address"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/lastNameInput"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genderRadio"
            android:layout_below="@+id/addressInput"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:background="#000"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="#fff"/>
            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textSize="18sp"
                android:textColor="#fff"
                android:checked="true"
                android:layout_marginLeft="8dp"
                android:onClick="changeGenderValue"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textSize="18sp"
                android:textColor="#fff"
                android:layout_marginLeft="8dp"
                android:onClick="changeGenderValue"/>
        </RadioGroup>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="email address"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/genderRadio"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/emailInput"/>


        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="confirm password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/passwordInput"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPasswordInput">

            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/cancel"
                android:textSize="18dp"
                android:layout_marginRight="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/cancelBtn" />

            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/sign_up_customer_proceed"
                android:textSize="18dp"
                android:layout_marginLeft="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/signUpBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="right">
            <ImageView
                android:id="@+id/conceptLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>